changed profile image

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
         </div>
     </nav>
     <!--nav ends here-->
-    <div class="container">
-        <div class="row my-5 p-5  gx-5">
+    <div class="container px-0">
+        <div class="row my-5   ">
 
             <div class="col-md-6 mb-5  pt-5 ">
 
@@ -69,13 +69,13 @@
                     exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
                 <div><a href="/work.html" class="btn btn-fill  d-block d-md-inline ">View all projects</a></div>
             </div>
-            <div class="col-md-6   ">
-                <img src="/images/1664996290162.jpg" alt="my image" class="img-fluid rounded mt-5">
+            <div class="col-md-6  blob  ">
+                <img src="/images/cy1-removebg-preview.png" alt="my image" class="img-fluid rounded mt-5">
             </div>
         </div>
 
     </div>
-    <div class="container">
+    <div class=" container">
         <div class="row my-5 py-5 rounded inquiry">
             <div class="col-md-6 mb-5 px-5  pt-5">
                 <h2 class="text-md-start text-center">Work Inquiry</h2>
